Fix alignment of button and fix space between teams

--- a/frontend/src/app/team/team.component.scss
+++ b/frontend/src/app/team/team.component.scss
@@ -11,10 +11,14 @@
   }
 }
 .team-actions {
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 
 .team-icons {
   width: 20px;
   height: 20px;
+}
+
+.team-title-margin {
+  margin-top: 2rem;
 }
